--- a/index.scss
+++ b/index.scss
@@ -1,6 +1,5 @@
 body {
     margin: 0;
-    padding: 16px;
     h1, h2, h3, h4, h5, h6, p {
         margin: 0;
     }
@@ -12,6 +11,17 @@ body {
         padding: 0;
         li {
             list-style: none;
+        }
+    }
+    .search_container {
+        background: #1E213A;
+        padding: 16px;
+        button {
+            background: #cbcdd7;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            border-radius: 4px;
+            border: none;
+            outline: none;
         }
     }
 }
