--- a/index.scss
+++ b/index.scss
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    color: white;
     h1, h2, h3, h4, h5, h6, p {
         margin: 0;
     }
@@ -13,15 +14,31 @@ body {
             list-style: none;
         }
     }
-    .search_container {
-        background: #1E213A;
-        padding: 16px;
-        button {
-            background: #cbcdd7;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            border-radius: 4px;
-            border: none;
-            outline: none;
+    .container {
+        // font-family: Raleway;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 19px;
+        color: #E7E7EB;
+        .search_container {
+            background: #1E213A;
+            padding: 16px;
+            button {
+                background: #cbcdd7;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                border: none;
+                outline: none;
+                font-size: 18px;
+            }
         }
+        .showinglists_container {
+            padding: 16px;
+            background: #100E1D;
+            div {
+                padding: 10px 0;
+            }
+        }
+
     }
 }
