--- a/index.scss
+++ b/index.scss
@@ -14,6 +14,9 @@ body {
             list-style: none;
         }
     }
+    button {
+        outline: none;
+    }
     .container {
         // font-family: Raleway;
         font-style: normal;
@@ -24,18 +27,48 @@ body {
         .search_container {
             background: #1E213A;
             padding: 16px;
+            display: flex;
+            flex-direction: column;
+            .title {
+                padding: 16px 20px;
+                margin-top: 20px;
+                margin-bottom: 20px;
+                border: 1px solid blue;
+                display: inline;
+            }
             button {
                 background: #cbcdd7;
                 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                 border: none;
-                outline: none;
                 font-size: 18px;
+                display: inline;
+            }
+            form {
+                // font-family: Raleway;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 19px;
+                input {
+                    background: #1E213A;
+                    border: 1px solid white;
+                    outline: none;
+                    padding: 10px 16px;
+                    color: #b5b8c9;
+                    margin-right: 20px;
+                }
+                button {
+                    background: #3C47E9;
+                    border: 1px solid white;
+                    color: white;
+                    padding: 10px 16px;
+                }
             }
         }
         .showinglists_container {
             padding: 16px;
             background: #100E1D;
-            div {
+            ul {
                 padding: 10px 0;
             }
         }
