--- a/index.scss
+++ b/index.scss
@@ -27,41 +27,43 @@ body {
         .search_container {
             background: #1E213A;
             padding: 16px;
-            display: flex;
-            flex-direction: column;
-            .title {
-                padding: 16px 20px;
-                margin-top: 20px;
-                margin-bottom: 20px;
-                border: 1px solid blue;
-                display: inline;
-            }
-            button {
+            .search {
                 background: #cbcdd7;
                 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                 border: none;
                 font-size: 18px;
-                display: inline;
+                padding: 10px 16px;
             }
-            form {
-                // font-family: Raleway;
-                font-style: normal;
-                font-weight: 500;
-                font-size: 16px;
-                line-height: 19px;
-                input {
-                    background: #1E213A;
-                    border: 1px solid white;
-                    outline: none;
-                    padding: 10px 16px;
-                    color: #b5b8c9;
-                    margin-right: 20px;
+            .search_form {
+
+                form {
+                    // font-family: Raleway;
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 16px;
+                    line-height: 19px;
+                    input {
+                        background: #1E213A;
+                        border: 1px solid white;
+                        outline: none;
+                        padding: 10px 16px;
+                        color: #b5b8c9;
+                        margin-right: 20px;
+                    }
+                    button {
+                        background: #3C47E9;
+                        border: 1px solid white;
+                        color: white;
+                        padding: 7px 16px;
+                    }
                 }
-                button {
-                    background: #3C47E9;
+                .title {
+                    padding: 16px 20px;
+                    margin-top: 20px;
+                    margin-bottom: 20px;
                     border: 1px solid white;
+                    background: none;
                     color: white;
-                    padding: 10px 16px;
                 }
             }
         }
