--- a/index.scss
+++ b/index.scss
@@ -1,79 +1,79 @@
-body {
-    margin: 0;
-    color: white;
-    h1, h2, h3, h4, h5, h6, p {
-        margin: 0;
-    }
-    a {
-        text-decoration: none;
-    }
-    ul {
-        margin: 0;
-        padding: 0;
-        li {
-            list-style: none;
-        }
-    }
-    button {
-        outline: none;
-    }
-    .container {
-        // font-family: Raleway;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 19px;
-        color: #E7E7EB;
-        .search_container {
-            background: #1E213A;
-            padding: 16px;
-            .search {
-                background: #cbcdd7;
-                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-                border: none;
-                font-size: 18px;
-                padding: 10px 16px;
-            }
-            .search_form {
+// body {
+//     margin: 0;
+//     color: white;
+//     h1, h2, h3, h4, h5, h6, p {
+//         margin: 0;
+//     }
+//     a {
+//         text-decoration: none;
+//     }
+//     ul {
+//         margin: 0;
+//         padding: 0;
+//         li {
+//             list-style: none;
+//         }
+//     }
+//     button {
+//         outline: none;
+//     }
+//     .container {
+//         // font-family: Raleway;
+//         font-style: normal;
+//         font-weight: 500;
+//         font-size: 18px;
+//         line-height: 19px;
+//         color: #E7E7EB;
+//         .search_container {
+//             background: #1E213A;
+//             padding: 16px;
+//             .search {
+//                 background: #cbcdd7;
+//                 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+//                 border: none;
+//                 font-size: 18px;
+//                 padding: 10px 16px;
+//             }
+//             .search_form {
 
-                form {
-                    // font-family: Raleway;
-                    font-style: normal;
-                    font-weight: 500;
-                    font-size: 16px;
-                    line-height: 19px;
-                    input {
-                        background: #1E213A;
-                        border: 1px solid white;
-                        outline: none;
-                        padding: 10px 16px;
-                        color: #b5b8c9;
-                        margin-right: 20px;
-                    }
-                    button {
-                        background: #3C47E9;
-                        border: 1px solid white;
-                        color: white;
-                        padding: 7px 16px;
-                    }
-                }
-                .title {
-                    padding: 16px 20px;
-                    margin-top: 20px;
-                    margin-bottom: 20px;
-                    border: 1px solid white;
-                    background: none;
-                    color: white;
-                }
-            }
-        }
-        .showinglists_container {
-            padding: 16px;
-            background: #100E1D;
-            ul {
-                padding: 10px 0;
-            }
-        }
+//                 form {
+//                     // font-family: Raleway;
+//                     font-style: normal;
+//                     font-weight: 500;
+//                     font-size: 16px;
+//                     line-height: 19px;
+//                     input {
+//                         background: #1E213A;
+//                         border: 1px solid white;
+//                         outline: none;
+//                         padding: 10px 16px;
+//                         color: #b5b8c9;
+//                         margin-right: 20px;
+//                     }
+//                     button {
+//                         background: #3C47E9;
+//                         border: 1px solid white;
+//                         color: white;
+//                         padding: 7px 16px;
+//                     }
+//                 }
+//                 .title {
+//                     padding: 16px 20px;
+//                     margin-top: 20px;
+//                     margin-bottom: 20px;
+//                     border: 1px solid white;
+//                     background: none;
+//                     color: white;
+//                 }
+//             }
+//         }
+//         .showinglists_container {
+//             padding: 16px;
+//             background: #100E1D;
+//             ul {
+//                 padding: 10px 0;
+//             }
+//         }
 
-    }
-}
+//     }
+// }
