--- a/index.scss
+++ b/index.scss
@@ -28,16 +28,21 @@ body {
         flex-direction: column;
         .search_container {
             background: #1E213A;
-            padding: 16px;
+            overflow-y: scroll;
+            overflow-x: hidden;
             .search {
                 background: #cbcdd7;
                 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                 border: none;
-                font-size: 18px;
+                font-size: 16px;
                 padding: 10px 16px;
+                margin-top: 18px;
+                margin-left: 11px;
+                margin-bottom: 76px;
             }
             .search_form {
                 width: 100%;
+                margin-left: 11px;
                 form {
                     // font-family: Raleway;
                     font-style: normal;
@@ -70,20 +75,26 @@ body {
             }
         }
         .showinglists_container {
-            padding: 16px;
+            padding-top: 16px;
             background: #100E1D;
             width: 100%;
             // display: grid;
             // grid: repeat(2, 1fr) / auto-flow;
-            .wrapper {
-                // background-color: blueviolet;
-                // max-width: 50%;
-                // margin-bottom: 10px;
-                li:nth-of-type(2) {
-                    ul {
-                        // display: flex;
-                        // flex-direction: row;
-                        // justify-content: space-between;
+            .wrapper_container {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                flex-wrap: wrap;
+                .wrapper {
+                    // background-color: blueviolet;
+                    // max-width: 50%;
+                    // margin-bottom: 10px;
+                    li:nth-of-type(2) {
+                        ul {
+                            // display: flex;
+                            // flex-direction: row;
+                            // justify-content: space-between;
+                        }
                     }
                 }
             }
@@ -91,9 +102,7 @@ body {
                 padding: 10px 0;
             }
             .actual_weather {
-                ul {
-                    background-color: black;
-                }
+                background-color: black;
             }
         }
 
