--- a/index.scss
+++ b/index.scss
@@ -58,7 +58,7 @@ body {
                         padding: 10px 16px;
                         color: #b5b8c9;
                         margin-right: 20px;
-                        width: 50%;
+                        width: 40%;
                     }
                     button {
                         background: #3C47E9;
@@ -74,6 +74,7 @@ body {
                     border: 1px solid white;
                     background: none;
                     color: white;
+                    max-width: 53%;
                 }
             }
         }
@@ -100,11 +101,13 @@ body {
                 .wrapper {
                     max-width: 50%;
                     margin-bottom: 10px;
-                    li:nth-of-type(2) {
+                    li:last-of-type {
                         ul {
                             display: flex;
                             flex-direction: row;
                             justify-content: space-between;
+                            padding-bottom: 0;
+                            margin-bottom: 0;
                         }
                     }
                 }
