--- a/index.scss
+++ b/index.scss
@@ -32,11 +32,11 @@ body {
     }
     .container {
         // font-family: Raleway;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 19px;
-        color: #E7E7EB;
+        // font-style: normal;
+        // font-weight: 500;
+        // font-size: 18px;
+        // line-height: 19px;
+        // color: #E7E7EB;
         display: flex;
         flex-direction: column;
         .search_container {
@@ -171,6 +171,7 @@ body {
                                     h3 {
                                         font-size: 16px;
                                         line-height: 19px;
+                                        padding-top: 16px;
                                     }
                                 }
                                 li:nth-of-type(2) {
@@ -206,11 +207,8 @@ body {
             // }
             .showinglists_container {
                 .sub_container {
-                    // padding-right: 10px;
-                    // padding-left: 10px;
                     max-width: 700px;
                     margin: auto;
-                    padding: 0;
                 }
                 
             }
