--- a/index.scss
+++ b/index.scss
@@ -211,18 +211,18 @@ body {
                     max-width: 700px;
                     margin: auto;
                     .actual_weather {
-                        ul {
-                            display: grid;
-                            grid-template-columns: 1fr 40px;
-                            li {
-                                width: 50%;
-                                ul {
-                                    li {
-                                        display: inline-block;
-                                    }
-                                }
-                            }
-                        }
+                        // ul {
+                        //     display: grid;
+                        //     grid-template-columns: 1fr 40px;
+                        //     li {
+                        //         width: 50%;
+                        //         ul {
+                        //             li {
+                        //                 display: inline-block;
+                        //             }
+                        //         }
+                        //     }
+                        // }
                     }
                 }
                 
