filling the README.md file

--- a/index.scss
+++ b/index.scss
@@ -1,318 +1,4 @@
-@font-face {
-    font-family: "Raleway_Regular";
-    src: local(Raleway_Regular),
-      url(./fonts/Raleway_Regular.woff2) format("woff2"),
-      url(./fonts/Raleway_Regular.woff) format("woff"),
-}
-@font-face {
-    font-family: "Raleway_Bold";
-    src: local(Raleway_Bold),
-      url(./fonts/Raleway_Bold.woff2) format("woff2"),
-      url(./fonts/Raleway_Bold.woff) format("woff"),
-}
-
-body {
-    margin: 0;
-    color: white;
-    h1, h2, h3, h4, h5, h6, p {
-        margin: 0;
-    }
-    a {
-        text-decoration: none;
-    }
-    ul {
-        margin: 0;
-        padding: 0;
-        li {
-            list-style: none;
-        }
-    }
-    button {
-        outline: none;
-    }
-    .container {
-        display: flex;
-        flex-direction: column;
-        .search_container {
-            background: #1E213A;
-            overflow-y: scroll;
-            overflow-x: hidden;
-            font-family: "Raleway_Rgular";
-            font-style: normal;
-            font-size: 16px;
-            line-height: 19px;
-            font-weight: 500;
-            color: #616475;
-            .container {
-                .toggle-menu {
-                    width: 50px;
-                    height: 50px;
-                    display: inline-block;
-                    position: relative;
-                    top: 10px;
-                    float: left;
-                    z-index: 1000;
-                  }
-                  
-                  .toggle-menu i {
-                    position: absolute;
-                    display: block;
-                    height: 2px;
-                    background: #0094FC;
-                    width: 30px;
-                    left: 0px;
-                    -webkit-transition: all .3s;
-                    transition: all .3s;
-                  }
-                  .container {
-                    position: relative;
-                    overflow: hidden;
-                    height: 9000px;
-                    z-index: 1;
-                  }
-                  
-                  .menu-drawer {
-                    max-width: 25%;
-                    background: #1E213A;
-                    height: 900px;
-                    position: absolute;
-                    left: -550px;
-                    top: 0;
-                    transition: right linear .2s;
-                    padding: 50px;
-                  }
-                  
-                  .open {
-                    left: 0px;
-                    transition: right linear .2s;
-                  }
-                .search {
-                    color: #E7E7EB;
-                    background: #6E707A;
-                    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-                    border: none;
-                    padding: 10px 16px;
-                    margin-top: 18px;
-                    margin-left: 11px;
-                    margin-bottom: 109px;
-                    margin-right: 319px;
-                    width: 162px;
-                }
-            }
-            .search_form {
-                width: 100%;
-                margin-left: 11px;
-                form {
-                    input {
-                        background: #1E213A;
-                        border: 1px solid white;
-                        outline: none;
-                        padding: 10px 16px;
-                        color: #b5b8c9;
-                        margin-right: 4%;
-                        width: 37%;
-                        margin-bottom: 10px;
-                    }
-                    button {
-                        font-weight: 600;
-                        background: #3C47E9;
-                        border: 1px solid white;
-                        padding: 10px 16px;
-                    }
-                }
-                .title {
-                    padding: 10px 16px;
-                    margin-top: 20px;
-                    margin-bottom: 20px;
-                    border: 1px solid white;
-                    background: none;
-                    max-width: 70%;
-                }
-            }
-            .actual_weather_details {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                li {
-                    font-family: "Raleway_Regular";
-                    font-style: normal;
-                }
-                li:first-of-type {
-                    img {
-                        max-width: 220px;
-                        padding-bottom: 87px;
-                    }
-                }
-                li:nth-of-type(2) {
-                    p {
-                        font-weight: 500;
-                        font-size: 144px;
-                        line-height: 169px;
-                        color: #E7E7EB;
-                        padding-bottom: 87px;
-                    }
-                }
-                li:nth-of-type(3) {
-                    span {
-                        font-weight: 600;
-                        font-size: 36px;
-                        line-height: 42px;
-                        color: #A09FB1;
-                    }
-                }
-                li:nth-of-type(4) {
-                    p {
-                        font-weight: 500;
-                        font-size: 18px;
-                        line-height: 21px;
-                        color: #88869D;
-                        padding-bottom: 32px;
-                    }
-                }
-            }
-        }
-        .showinglists_container {
-            background: #100E1D;
-            width: 100%;
-            font-style: normal;
-            .sub_container {
-                padding-right: 10px;
-                padding-left: 10px;
-                .degree_button {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: flex-end;
-                    padding-top: 42px;
-                    padding-bottom: 60px;
-                    button:nth-of-type(1) {
-                        margin-right: 10px;
-                    }
-                    button {
-                        font-family: "Raleway_bold";
-                        font-weight: bold;
-                        font-size: 18px;
-                        line-height: 21px;
-                        color: #110E3C;
-                    }
-                }
-                .wrapper_container {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-between;
-                    flex-wrap: wrap;
-                    padding-bottom: 72px;
-                    .wrapper {
-                        width: 15%;
-                        margin-bottom: 10px;
-                        background: #1E213A;
-                        padding: 10px;
-                        li {
-                            font-family: "Raleway_Regular";
-                            font-weight: 500;
-                            font-size: 16px;
-                            line-height: 19px;
-                            color: #E7E7EB;
-                        }
-                        li:last-of-type {
-                            ul {
-                                display: flex;
-                                flex-direction: row;
-                                justify-content: space-between;
-                                padding-bottom: 0;
-                                margin-bottom: 0;
-                            }
-                        }
-                    }
-                }
-                .actual_weather {
-                    h2 {
-                        font-family: "Raleway_Bold";
-                        font-weight: bold;
-                        font-size: 24px;
-                        line-height: 28px;
-                        color: #E7E7EB;
-                        padding-bottom: 32px;
-                    }
-                    ul {
-                        li {
-                            background: #1E213A;
-                            width: 100%;
-                            margin: auto;
-                            display: flex;
-                            flex-direction: column;
-                            align-items: center;
-                            margin-bottom: 10px;
-                            ul {
-                                li {
-                                    width: 109px;
-                                    padding: 0;
-                                    margin-bottom: 10px;
-                                    font-family: "Raleway_Regular";
-                                    font-size: 16px;
-                                    line-height: 19px;
-                                    color: #E7E7EB;
-                                }
-                                li:first-of-type {
-                                    h3 {
-                                        font-family: "Raleway_Regular";
-                                        font-weight: 500;
-                                        padding-top: 22px;
-                                    }
-                                }
-                                li:nth-of-type(2) {
-                                    font-family: "Raleway_Bold";
-                                    font-weight: bold;
-                                    font-size: 64px;
-                                    line-height: 75px;
-                                    color: #E7E7EB;
-                                    display: flex;
-                                    flex-direction: row;
-                                    align-items: baseline;
-                                    span {
-                                        font-weight: normal;
-                                        font-size: 30px;
-                                        line-height: 40px;
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
-
-    }
-}
-
-
-@media(min-width: 720px) {
-    body {
-        .container {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            .showinglists_container {
-                .sub_container {
-                    max-width: 700px;
-                    margin: auto;
-                    .actual_weather {
-                        // ul {
-                        //     display: grid;
-                        //     grid-template-columns: 1fr 40px;
-                        //     li {
-                        //         width: 50%;
-                        //         ul {
-                        //             li {
-                        //                 display: inline-block;
-                        //             }
-                        //         }
-                        //     }
-                        // }
-                    }
-                }
-                
-            }
-    
-        }
-    }
-}
+@import "default";
+@import "search";
+@import "actual_weather";
+@import "showingLists";
