--- a/index.scss
+++ b/index.scss
@@ -1,4 +1,3 @@
-@import "default";
-@import "search";
-@import "actual_weather";
-@import "showingLists";
+// @import "default";
+// @import "search";
+
